--- a/style.css
+++ b/style.css
@@ -35,7 +35,44 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-color: white;
 }
+
+.hero__image__pattren{
+  background-position: center;
+}
+
+.video{
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
+.h{
+  font-style: italic;
+  font-size: x-large;
+  text-align: center;
+}
+
+.form{
+  font-size: 30px;
+  text-align: center;
+  
+}
+
+.email{
+  width: 300px;
+  height: 30px;
+  margin-left: 170px;
+  border: 1px solid #ee89a0;
+  background-color: #fcedf0;
+  color: #1d3557;
+  font-weight: 700;
+  padding: 0.5rem;
+  border-radius: 4px;
+}
+}
+
 
 .navbar__brand {
   width: 100px;
@@ -50,6 +87,7 @@ body {
 }
 .hero__image__container {
   width: 100%;
+  
 }
 
 .hero__image {
@@ -226,4 +264,80 @@ body {
   .container {
     max-width: 1250px;
   }
+}
+
+.quote__container {
+  position: relative;
+  margin-top: 4rem;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 200px;
+  width: 100%;
+  border-radius: 13px;
+  background: url(https://images.unsplash.com/photo-1522336572468-97b06e8ef143?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=755&q=80) center center / cover no-repeat;
+}
+
+
+.quote_image_overlay {
+  position: absolute;
+  height: 200px;
+  width: 100%;
+  border-radius: 13px;
+  background-color: #0a4065;
+  opacity: 49%;
+}
+
+
+h3 {
+  display: block;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  font-size: xx-large;
+}
+
+.quote_image_text {
+  color: #fff;
+  z-index: 3;
+  margin: 0 1rem;
+  text-align: center;
+}
+
+
+
+
+
+footer {
+    margin-top: 10px;
+    padding: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    flex-direction: row;
+    background-image: linear-gradient( to right, #ff512f 0%, #dd2476 51%, #ff512f 100% );
+    color: white;
+    
+}
+
+footer > img {
+  width: 300px;
+  filter: brightness(0) invert(1);
+}
+
+ul {
+  list-style-type: none;
+}
+
+footer > ul > li {
+  margin: 6px 0;
+}
+
+li {
+  display: list-item;
+  text-align: -webkit-match-parent;
 }
