--- a/style.css
+++ b/style.css
@@ -38,10 +38,6 @@ body {
   background-color: white;
 }
 
-.hero__image__pattren{
-  background-position: center;
-}
-
 .video{
   display: flex;
   justify-content: center;
@@ -87,18 +83,45 @@ body {
 }
 .hero__image__container {
   width: 100%;
+  position: relative;
+  
   
 }
 
+
+
 .hero__image {
-  width: 100%;
+  
+ padding: 60px; 
+ width: 550px;
+ height: 430px;
+ top:-32px;
+ position: relative;
+ left: 100px;
+ 
+}
+ 
+ .pattern{ 
+  position: absolute;
+  background-image: url(./assets/herobgpattren.svg);
+   position: -webkit-sticky;
+  z-index: -10;
+  left: 165px;
+  
+  
+  width: 500px;
+  height: 400px;
+    
 }
 
 .hero__text {
-  font-size: 30px;
+  font-size: 11.875rem;
+  line-height: 2.95rem;
+  
   color: #1d3557;
-  margin: 20px 0;
+  font-weight: 900;
 }
+
 
 /* Menu Styles */
 
@@ -236,6 +259,17 @@ body {
   .restaurants__flex {
     width: 100%;
   }
+  .email{
+    width: 300px;
+    height: 30px;
+    margin-left: 170px;
+    border: 1px solid #ee89a0;
+    background-color: #fcedf0;
+    color: #1d3557;
+    font-weight: 700;
+    padding: 0.5rem;
+    border-radius: 4px;
+  }
 }
 
 @media (min-width: 1020px) {
@@ -307,6 +341,8 @@ h3 {
   margin: 0 1rem;
   text-align: center;
 }
+
+
 
 
 
